# aoc2024

./: .gitignore  CMakeLists.txt  README.md  generateDays.py  utils.cmake
src/01/: CMakeLists.txt  part1.cpp  part2.cpp
src/02/: CMakeLists.txt  part1.cpp  part2.cpp
src/03/: CMakeLists.txt  part1.cpp  part2.cpp
src/04/: CMakeLists.txt  part1.cpp  part2.cpp
src/05/: CMakeLists.txt  part1.cpp  part2.cpp  t2.txt
src/06/: CMakeLists.txt  part1.cpp  part2.cpp  t2.txt
src/07/: CMakeLists.txt  part1.cpp  part2.cpp
src/08/: CMakeLists.txt  part1.cpp  part2.cpp
src/09/: CMakeLists.txt  part1.cpp  part2.cpp
src/10/: CMakeLists.txt  part1.cpp  part2.cpp
src/11/: CMakeLists.txt  part1.cpp  part2.cpp
src/12/: CMakeLists.txt  part1.cpp  part2.cpp
src/13/: CMakeLists.txt  part1.cpp  part2.cpp
src/14/: CMakeLists.txt  part1.cpp  part2.cpp
src/15/: CMakeLists.txt  part1.cpp  part2.cpp
src/16/: CMakeLists.txt  part1.cpp  part2.cpp
src/17/: CMakeLists.txt  part1.cpp  part2.cpp  t1.txt  t3.txt  t4.txt  t5.txt
src/18/: CMakeLists.txt  part1.cpp  part2.cpp
src/19/: CMakeLists.txt  part1.cpp  part2.cpp
src/20/: CMakeLists.txt  part1.cpp  part2.cpp
src/21/: CMakeLists.txt  part1.cpp  part2.cpp
src/22/: CMakeLists.txt  part1.cpp  part2.cpp
src/23/: CMakeLists.txt  part1.cpp  part2.cpp
src/24/: CMakeLists.txt  et1.csv  part1.cpp  part2.cpp
templates/: CMakeLists.txt  part1.cpp
utils/: Logger.cpp  Logger.h  Logger.hpp  matrix.hpp  utils.h  utils.hpp
